# bridgic

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  latest  pyproject.toml  versions.json
agent-tracer/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXTRACTION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.zh-CN.md  USAGE_GUIDE.md  pyproject.toml  setup.py  ✅_COMPLETION_REPORT.md
agent-tracer/examples/: basic_usage.py  console_only.py  custom_framework.py  langchain_integration.py  multi_agent.py
agent-tracer/src/agent_tracer/: __init__.py  base.py  schema.py  service.py  utils.py
agent-tracer/src/agent_tracer/tracers/: __init__.py  arize_phoenix.py  console.py  langfuse.py  langsmith.py  langwatch.py  opik.py  traceloop.py
agent-tracer/tests/: __init__.py  conftest.py  test_basic.py
bridgic-core/: Makefile  pyproject.toml  todo-intelligence.md
bridgic-core/bridgic/core/agentic/: __init__.py  _concurrent_automa.py  _sequential_automa.py  sequential_automa.py
bridgic-core/bridgic/core/automa/: __init__.py  _automa.py  _graph_automa.py  _graph_meta.py  arguments_descriptor.py  arguments_inject.py  automa.py  concurrent_automa.py  goal_decorator.py  goap_automa.py  graph_automa.py  graph_fragment.py  graph_meta.py  llmp_automa.py  parameter_inject.py  sequential_automa.py  worker_decorator.py
bridgic-core/bridgic/core/config/: __init__.py  _global_setting.py
bridgic-core/bridgic/core/constants/: __init__.py  _logging.py
bridgic-core/bridgic/core/intelligence/: __init__.py  base_llm.py  content.py  protocol.py  tool_spec.py
bridgic-core/bridgic/core/llm/: llm.py
bridgic-core/bridgic/core/logging/: __init__.py  _decorators.py  _log_event.py  _logger.py
bridgic-core/bridgic/core/mcp/: __init__.py  _mcp_server_connection.py  _mcp_server_connection_manager.py
bridgic-core/bridgic/core/model/: __init__.py  _base_llm.py  _protocol.py  base_llm.py  content.py  protocol.py
bridgic-core/bridgic/core/prompt/: __init__.py  _base_template.py  _ejinja_template.py  _fstring_template.py  _mcp_template.py  base_template.py  chat_message.py  ejinja_template.py  fstring_template.py
bridgic-core/bridgic/core/serialization/: base.py  msgpackx.py
bridgic-core/bridgic/core/tracing/: __init__.py  _context_stack.py
bridgic-core/bridgic/core/types/: _common.py  _error.py  _serialization.py  _worker_types.py  common.py  error.py  llm_basic.py  serialization.py  thread_safe_stream.py
bridgic-core/bridgic/core/utils/: __init__.py  _args_map.py  _cache.py  _inspect_tools.py  _json_schema.py  _worker_context.py  args_map.py  collection.py  graph_tools.py  inspect_tools.py  msgpackx.py  property_tools.py  state_tools.py
bridgic-core/tests/core/: conftest.py
bridgic-core/tests/core/agentic/: test_asl_automa.py  test_case.py  test_concurrent_automa.py  test_design_pattern_subtasking_concurrent.py  test_inputs.py  test_react_automa.py  test_react_automa_github_mcp.py  test_sequential_automa.py  test_tool_spec.py
bridgic-core/tests/core/automa/: test_args_inject_and_callback.py  test_args_mapping.py  test_args_mapping_custom_workers.py  test_args_mapping_decorated_workers.py  test_automa_compile.py  test_automa_dynamic_topology.py  test_automa_rerun.py  test_automa_running.py  test_callback.py  test_case.py  test_concurrency.py  test_concurrent_automa.py  test_design_pattern_subtasking_concurrent.py  test_event_handling.py  test_graph_fragment.py  test_human_interaction.py  test_inputs_propagation.py  test_local_space.py  (+8 more)
bridgic-integration/: pyproject.toml
bridgic-integration/callbacks/bridgic-callbacks-trace-opik/: README.md  pyproject.toml
bridgic-integration/llms/bridgic-llms-openai/: LICENSE  Makefile  pyproject.toml
bridgic-integration/llms/bridgic-llms-openai-like/: Makefile  pyproject.toml
bridgic-integration/llms/bridgic-llms-vllm/: Makefile  pyproject.toml
bridgic-integration/protocols/bridgic-protocols-mcp/: Makefile  README.md  pyproject.toml
bridgic-integration/tests/integration/: test_xxx.py
bridgic-integration/traces/bridgic-traces-langwatch/: README.md  pyproject.toml
bridgic-integration/traces/bridgic-traces-opik/: README.md  pyproject.toml
docs/: CNAME  Makefile  README.md  mkdocs.yml  pyproject.toml  quickstart.md
docs/auxiliaries/: declarative_api_examples.md
docs/docs/: doc1.md  index.md  index.zh.md
docs/docs/home/: basics.md  basics.zh.md  concepts.md  installation.md  introduction.md  introduction.zh.md
docs/docs/ipynb/: a.ipynb
docs/docs/reference/: SUMMARY.md
docs/docs/stylesheets/: extra.css  sticky_navigation.css
docs/docs/subdir/: doc2.md
docs/docs/tutorials/: .env  dynamic_dag.ipynb  dynamic_router.ipynb  first_bridgic_project.ipynb  index.md  index.zh.md  index_core_mechanism.md  index_model_integration.md  install.md  installation.md  installation.zh.md  llm.ipynb  logic_arrangement.ipynb  model_usage.ipynb  parameter_passing.ipynb  worker.ipynb
docs/docs/understanding/: basics.md  introduction.md  mcp_integration.md  recent_automa.md
docs/hooks/: i18n_ipynb_fix.py
docs/images/: classic-10-worker-automa.excalidraw
docs/overrides/: main.html
docs/overrides/partials/: logo.html  nav.html
docs/scripts/: doc_config.yaml  gen_mkdocs_yml.py  gen_ref_pages_safe.py  mkdocs_template.yml
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/about/: index.html
docs/site/api/: index.html
docs/site/home/: index.html
docs/site/search/: search_index.json
docs/site/stylesheets/: extra.css
docs/site/tutorials/: index.html
tests/: conftest.py  pyproject.toml
tests/automa/code_first/: test_automa_callable_worker.py  test_automa_simple_flow.py
tests/automa/decorator_based/: test_automa_decorator_orchestration.py  test_automa_execution_flow_and_local_buffer.py
tests/human_interaction/: test_with_args_inject.py  test_with_concurrent.py  test_with_nested.py  test_with_sequential.py
tests/react_automa/: test_with_browser_use_mcp.py  test_with_github_mcp.py
tests/recent_automa/: test_with_github_and_browser_use_mcp.py
(+1008 files in other folders)
