[project]
name = "bridgic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tielei Zhang", email = "43289893@qq.com" }
]
requires-python = ">=3.9"
dependencies = [
    "msgpack>=1.1.1",
    "pydantic>=2.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.hatch.build]
sources = ["src"]
include = ["src/bridgic/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = ["--tb=short", "--verbose"]
