[project]
name = "bridgic"
version = "0.1.0.dev1"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
description = "Bridgic is a project that enables developers to develop agents/workflows in a more natural and flexible way, consisting of several Python packages."
keywords = ["LLM", "devtools", "workflow", "agent"]
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tielei Zhang", email = "zhangtl04@gmail.com" },
]
dependencies = [
    "bridgic-core>=0.1.0.dev1,<0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["/meta/bridgic/"]

[tool.hatch.build.targets.wheel.sources]
"/meta/bridgic" = "bridgic"

[tool.uv.sources]
bridgic-core = { index = "btsk-repo" }

[[tool.uv.index]]
name = "btsk-repo"
url = "http://8.130.156.165:3141/btsk/test/+simple"
publish-url = "http://8.130.156.165:3141/btsk/test/"
explicit = true

# [[tool.uv.index]]
# name = "test-pypi"
# url = "https://test.pypi.org/project/+simple"
# publish-url = "https://test.pypi.org/project/"
# explicit = true