[project]
name = "bridgic-core"
version = "0.1.0.dev21"
license = {text = "MIT"}
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
description = "Core classes and abstractions of Bridgic, as well as basic implementations for the orchestration framework."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tielei Zhang", email = "zhangtl04@gmail.com" },
]
dependencies = [
    "msgpack>=1.1.1",
    "pydantic>=2.11.0,<2.12.0",
    "jinja2>=3.1.0",
    "docstring-parser>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "bridgic-llms-openai>=0.1.0.dev11",
    "bridgic-llms-openai-like>=0.1.0.dev11",
    "bridgic-llms-vllm>=0.1.0.dev9",
]

[tool.pytest.ini_options]
addopts = ["--tb=short", "--verbose"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bridgic/"]

[tool.uv.sources]
bridgic-llms-openai = { path = "../bridgic-integration/llms/bridgic-llms-openai" }
bridgic-llms-openai-like = { path = "../bridgic-integration/llms/bridgic-llms-openai-like" }
bridgic-llms-vllm = { path = "../bridgic-integration/llms/bridgic-llms-vllm" }

[[tool.uv.index]]
name = "btsk-repo"
url = "http://8.130.156.165:3141/btsk/test/+simple"
publish-url = "http://8.130.156.165:3141/btsk/test/"
explicit = true

# [[tool.uv.index]]
# name = "test-pypi"
# url = "https://test.pypi.org/project/+simple"
# publish-url = "https://test.pypi.org/project/"
# explicit = true