[project]
name = "bridgic-llms-openai-like"
version = "0.1.0.dev11"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
description = "OpenAI-like LLM adapters for Bridgic, enabling connectivity with external LLM providers."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tielei Zhang", email = "zhangtl04@gmail.com" },
]
dependencies = [
    "bridgic-core>=0.1.0.dev21",
    "openai>=1.60.0",
    "httpx>=0.28.1",
    "httpx-aiohttp>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
addopts = ["--tb=short", "--verbose"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bridgic/"]

[tool.uv.sources]
bridgic-core = { path = "../../../bridgic-core" }

[[tool.uv.index]]
name = "btsk-repo"
url = "http://8.130.156.165:3141/btsk/test/+simple"
publish-url = "http://8.130.156.165:3141/btsk/test/"
explicit = true

# [[tool.uv.index]]
# name = "test-pypi"
# url = "https://test.pypi.org/project/+simple"
# publish-url = "https://test.pypi.org/project/"
# explicit = true