[project]
name = "bridgic-llms-vllm"
version = "0.1.2.dev1"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
description = "VLLM adapters for Bridgic, enabling connectivity with self-hosted LLM providers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tielei Zhang", email = "zhangtl04@gmail.com" },
]
dependencies = [
    "bridgic-core>=0.1.4.dev1",
    "bridgic-llms-openai-like>=0.1.2.dev1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
addopts = ["--tb=short", "--verbose"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bridgic/"]

[tool.uv.sources]
bridgic-core = { path = "../../../bridgic-core", editable = true }
bridgic-llms-openai-like = { path = "../bridgic-llms-openai-like", editable = true }
